SERVER-72222 fix mapReduce single reduce optimization in sharded clusters